<resources>
    <string name="app_name">zomentum_tushar_chopra</string>
    <string name="zomentum">Zomentum</string>
    <string name="search_friends">Search Friends</string>
    <string name="friend_stories">Friend Stories</string>
    <string name="naina">Naina</string>
    <string name="hello">hello</string>
    <string name="hello_my_name_is_naina">hello my name is Naina</string>
    <string name="_4_35_pm">4:35 pm</string>
    <string name="today">Today</string>
    <string name="tuesday_4_30_pm">Tuesday, 4:30 PM</string>
    <string name="nope">Nope</string>
    <string name="seen">Seen</string>
    <string name="what_you_doing">What you doing?</string>
    <string name="what_are_you_doing">What are you doing?</string>
    <string name="nothing_much_what_about_you">Nothing much!What about you?</string>
    <string name="type_something">Type Something...</string>
</resources>
